alteracoes para deploy no Heroku

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -26,3 +26,9 @@ info.app.version=@project.version@
 
 # spring boot admin server
 spring.boot.admin.client.url=http://localhost:8081
+
+
+
+server.port=${PORT}
+
+
